--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ font-family: 'Roboto', sans-serif;
 */
 
 :root {
-    --black: #333;
+    --black: #000;
     --torch-red: #FE142F;
     --white: #FFF;
 
@@ -112,11 +112,59 @@ img {
 
 
 @media screen and (min-width: 768px) {
+    /* Header Settings */
+    .main-header {
+        margin-bottom: 30px;
+    }
+
     .burger-nav-wrapper {
         display: none;
     }
-
+    
     .main-nav {
         display: block;
+    }
+
+    /* Main Settings  */
+    .main-content {
+        position: relative;
+        display: grid;
+        grid-template-columns: 30%  70%;
+        margin-bottom: 100px;
+    }
+
+    .main-content-text {
+        color: var(--white);
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        top: 0;
+    }
+
+    .bg-black {
+        background-color: var(--black);
+    }
+
+    .main-img-wrapper {
+        margin-bottom: 0px;
+    }
+
+    .main-img {
+        height: 100%;
+    }
+
+    .sign-up-btn-wrapper {
+        position: absolute;
+        z-index: 1;
+        bottom: 0;
+        left: 0;
+    }
+
+    .main-footer.w-90 {
+        width: 95%;
+    }
+
+    .footer-copyright {
+        text-align: left;
     }
 }
